--- a/Assets/_MiniGame/Scripts/Runtime/UrbanFox.MiniGame.asmdef
+++ b/Assets/_MiniGame/Scripts/Runtime/UrbanFox.MiniGame.asmdef
@@ -3,6 +3,8 @@
     "rootNamespace": "UrbanFox.MiniGame",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:df380645f10b7bc4b97d4f5eb6303d95",
+        "GUID:457756d89b35d2941b3e7b37b4ece6f1",
         "GUID:4307f53044263cf4b835bd812fc161a4",
         "GUID:fefe7c43bea33544bbf350e3f237a3a1",
         "GUID:cc6ab0a6be025784b85e5c1448f24bf0",
