Fix (Audio): Added Master, Game, and UI Buses

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ ProjectSettings/BurstAotSettings_StandaloneWindows.json
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
+
+# Other files
+.cache
