--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,7 @@ fmod_editor.log
 
 # Other files
 .cache
+*.unitypackage.meta
+Assets/Plugins/FMOD/platforms/mac/lib/resonanceaudio.bundle/Contents/Info.plist
+Assets/Plugins/FMOD/platforms/mac/lib/fmodstudioL.bundle/Contents/Info.plist
+Assets/Plugins/FMOD/platforms/mac/lib/fmodstudio.bundle/Contents/Info.plist
